Footer: fix accidental horizontal scrolling

--- a/components/Footer/style.module.less
+++ b/components/Footer/style.module.less
@@ -59,15 +59,19 @@
 .logos {
     display: flex;
     flex-wrap: wrap;
-    margin: 1rem -2rem;
+    margin: 1rem -1rem;
 }
 
 .logo {
     flex: 0 1 11rem;
-    margin: 2rem;
+    margin: 1rem;
 
     &_wj {
         flex-basis: 13rem;
+    }
+
+    &_bmbf {
+        margin-right: 2rem;
     }
 
     @media (min-width: @mobileWidth) {
